WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196302
[iOS] Automatic focus of input field is flaky
https://bugs.webkit.org/show_bug.cgi?id=196302
Summary
[iOS] Automatic focus of input field is flaky
Per Arne Vollan
Reported
2019-03-27 09:57:20 PDT
Sometime auto focus is enabled, sometimes not. This can be seen on baidu.com and bing.com in the simulator.
Attachments
Patch
(6.17 KB, patch)
2019-03-27 10:17 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews123 for ios-simulator-wk2
(2.29 MB, application/zip)
2019-03-27 11:39 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews200 for win-future
(12.86 MB, application/zip)
2019-03-27 12:00 PDT
,
EWS Watchlist
no flags
Details
Patch
(6.17 KB, patch)
2019-03-27 12:32 PDT
,
Per Arne Vollan
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews122 for ios-simulator-wk2
(1.54 MB, application/zip)
2019-03-27 13:58 PDT
,
EWS Watchlist
no flags
Details
Patch
(6.13 KB, patch)
2019-03-28 11:39 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(6.75 KB, patch)
2019-03-28 13:15 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(9.46 KB, patch)
2019-03-28 14:33 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2019-03-27 09:59:15 PDT
rdar://problem/48970509
Per Arne Vollan
Comment 2
2019-03-27 10:17:05 PDT
Created
attachment 366079
[details]
Patch
Brent Fulgham
Comment 3
2019-03-27 10:30:58 PDT
Comment on
attachment 366079
[details]
Patch Good. R=me
EWS Watchlist
Comment 4
2019-03-27 11:39:41 PDT
Comment on
attachment 366079
[details]
Patch
Attachment 366079
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/11685709
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 5
2019-03-27 11:39:42 PDT
Created
attachment 366086
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 6
2019-03-27 12:00:42 PDT
Comment on
attachment 366079
[details]
Patch
Attachment 366079
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/11685893
New failing tests: animations/resume-after-page-cache.html
EWS Watchlist
Comment 7
2019-03-27 12:00:53 PDT
Created
attachment 366087
[details]
Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Per Arne Vollan
Comment 8
2019-03-27 12:32:33 PDT
Created
attachment 366092
[details]
Patch
EWS Watchlist
Comment 9
2019-03-27 13:58:42 PDT
Comment on
attachment 366092
[details]
Patch
Attachment 366092
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/11687046
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 10
2019-03-27 13:58:44 PDT
Created
attachment 366102
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Per Arne Vollan
Comment 11
2019-03-28 11:39:16 PDT
Created
attachment 366189
[details]
Patch
Per Arne Vollan
Comment 12
2019-03-28 13:15:18 PDT
Created
attachment 366196
[details]
Patch
Per Arne Vollan
Comment 13
2019-03-28 14:33:55 PDT
Created
attachment 366207
[details]
Patch
Per Arne Vollan
Comment 14
2019-03-28 14:34:37 PDT
I uploaded a new patch for review, since the patch changed a little bit since the approved version.
Brent Fulgham
Comment 15
2019-03-28 15:09:54 PDT
Comment on
attachment 366207
[details]
Patch r=me
Per Arne Vollan
Comment 16
2019-03-28 16:03:21 PDT
Comment on
attachment 366207
[details]
Patch Thanks for reviewing!
WebKit Commit Bot
Comment 17
2019-03-28 16:30:58 PDT
Comment on
attachment 366207
[details]
Patch Clearing flags on attachment: 366207 Committed
r243630
: <
https://trac.webkit.org/changeset/243630
>
WebKit Commit Bot
Comment 18
2019-03-28 16:30:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug